--- a/StockControl.Application/StockControl.Application.csproj
+++ b/StockControl.Application/StockControl.Application.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\StockControl.Core\StockControl.Core.csproj" />
   </ItemGroup>
 
