--- a/StockControl.API/StockControl.API.csproj
+++ b/StockControl.API/StockControl.API.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\StockControl.Infrastructure\StockControl.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update=".env">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
